syntax = "proto3";
package focus;
option go_package = "tinytiktok/user/proto/focus";

// 关注请求
message FavoriteRequest {
  string token = 1; // 用户鉴权token
  int64 user_id = 2; // 用户id
  int64 to_user_id = 3; // 对方用户id
  int32 action_type = 4; // 1-关注，2-取消关注
}

// 关注响应
message FavoriteResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}